make sure to postfix big units on cards, updated spacing for mobile

--- a/packages/comps/src/components/market-card/market-card.styles.less
+++ b/packages/comps/src/components/market-card/market-card.styles.less
@@ -499,7 +499,7 @@ span.ExtraOutcomes {
           > span:last-of-type {
             .text-12-semi-bold;
 
-            margin-left: @size-8;
+            margin-left: @size-4;
             margin-top: 0;
           }
         }
@@ -515,7 +515,7 @@ span.ExtraOutcomes {
           > span:last-of-type {
             .text-12-semi-bold;
 
-            margin-left: @size-8;
+            margin-left: @size-4;
             margin-top: 0;
           }
         }
